PZHelper // Optimize a translation for a button in Japanese.

--- a/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -2506,7 +2506,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "絶区ゼロ"
+            "value" : "ゼンゼロ"
           }
         },
         "ko" : {
